Bug fix: allow scroll when overflow in FilterLabelBox

--- a/components/Labels/FilterLabelBox.module.scss
+++ b/components/Labels/FilterLabelBox.module.scss
@@ -5,7 +5,8 @@
   border-radius: 4px;
   padding: 0 20px 25px 20px;
 
-  display: block;
+  display: flex;
+  flex-direction: column;
 
   width: 600px;
   max-height: 90vh;
@@ -33,15 +34,18 @@
 
 .searchSection {
   display: flex;
+  margin-bottom: 15px;
 }
 
 .labelSection {
   display: block;
   justify-content: left;
+  overflow: auto;
 }
 
 .labelCounter {
   font-size: 16px;
+  margin-top: 10px;
 }
 
 .labelContainer {
